--- a/backend/reports-backend/templates/reports.html
+++ b/backend/reports-backend/templates/reports.html
@@ -1,6 +1,7 @@
 <!doctype html>
+<html lang="en">
 <head>
-  <title>Hello from Flask</title>
+  <title>Caliper Kings - Reports</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
         rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
@@ -8,22 +9,25 @@
   <link rel="stylesheet" href="{{ url_for('static', filename="css/reports.css") }}">
 </head>
 <body>
-<h1 class="text-center">Reports</h1>
+<h1 class="text-center my-4">Reports</h1>
 <div class="container">
-  <div class="row row-cols-4">
+  <div class="row">
     {% for id, report in reports.items() %}
       {% set asset_id = (id % 3) + 1 %}
       {% set image_name = "images/car-crash-" + (asset_id|string) + ".webp" %}
-      <div class="card" style="width: 18rem;">
-        <img src="{{ url_for('static', filename=image_name) }}" class="card-img-top"
-             alt="Random Image of Crash">
-        <div class="card-body">
-          <h5 class="card-title">Report {{ id }}</h5>
-          <p class="card-text">Report pushed at ***</p>
-          <a href="#" class="btn btn-primary">Check Report</a>
+      <div class="col-md-3 col-sm-4 mb-4">
+        <div class="card shadow" style="width: 18rem;">
+          <img src="{{ url_for('static', filename=image_name) }}" class="card-img-top"
+               alt="Random Image of Crash">
+          <div class="card-body">
+            <h5 class="card-title">Report {{ id }}</h5>
+            <p class="card-text">Report pushed at ***</p>
+            <a href="/reports/{{ id }}" class="btn btn-primary">Check Report</a>
+          </div>
         </div>
       </div>
     {% endfor %}
   </div>
 </div>
 </body>
+</html>
