Refactors backend service

--- a/backend/reports-backend/templates/report.html
+++ b/backend/reports-backend/templates/report.html
@@ -20,6 +20,7 @@
         <div class="card-body">
           <h5 class="card-title">Report {{ report.ID }}</h5>
           <p class="card-text">Report pushed at {{ report.REPORT_DATE }}</p>
+          <p> {{ report_data }} </p>
         </div>
       </div>
     </div>
