--- a/backend/reports-backend/templates/report.html
+++ b/backend/reports-backend/templates/report.html
@@ -20,10 +20,39 @@
         <div class="card-body">
           <h5 class="card-title">Report {{ report.ID }}</h5>
           <p class="card-text">Report pushed at {{ report.REPORT_DATE }}</p>
-          <p> {{ report_data }} </p>
+          <button class="btn btn-primary" type="button" data-toggle="collapse"
+                  data-target="#reportData" aria-expanded="false" aria-controls="collapseExample">
+            See Report
+          </button>
+          <div class="collapse" id="reportData">
+            <button class="btn btn-secondary mt-2" onclick="copyToClipboard()">Copy to Clipboard</button>
+            <pre><code id="reportDataText">{{ report_data }}</code></pre>
+          </div>
         </div>
       </div>
     </div>
   </div>
 </div>
+
+<script>
+  function copyToClipboard() {
+    const reportText = document.getElementById("reportDataText").innerText;
+    navigator.clipboard.writeText(reportText).then(() => {
+      alert("Report data copied to clipboard!");
+    }).catch(err => {
+      console.error("Failed to copy: ", err);
+      alert("Failed to copy the text. Please try again.");
+    });
+  }
+</script>
+
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+        integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+        crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js"
+        integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+        crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"
+        integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+        crossorigin="anonymous"></script>
 </body>
