--- a/backend/reports-backend/templates/videos.html
+++ b/backend/reports-backend/templates/videos.html
@@ -1,92 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Videos Dashboard</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            background-color: #2e7d32; /* Green background */
-            color: white;
-        }
-        .container {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            padding: 20px;
-        }
-        .header {
-            width: 100%;
-            background-color: #1b5e20;
-            padding: 10px 0;
-            text-align: center;
-        }
-        .header h1 {
-            margin: 0;
-            font-size: 24px;
-        }
-        .video-list {
-            width: 100%;
-            max-width: 800px;
-            margin-top: 20px;
-        }
-        .video-container {
-            background-color: #388e3c;
-            padding: 15px;
-            margin-bottom: 20px;
-            border-radius: 5px;
-        }
-        .video-container p {
-            font-size: 18px;
-            color: white;
-        }
-        .download-button {
-            margin-top: 10px;
-            padding: 10px 20px;
-            font-size: 16px;
-            background-color: red;
-            color: white;
-            border: none;
-            cursor: pointer;
-            border-radius: 5px;
-        }
-        .download-button:hover {
-            background-color: #45a049;
-        }
-    </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+        rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+        crossorigin="anonymous">
+  <title>Videos Dashboard</title>
 </head>
 <body>
-    <div class="container">
-        <div class="header">
-            <h1>Videos Dashboard</h1>
-        </div>
-        <div class="video-list">
-            {% for video in video_files %}
-            <div class="video-container">
-                <p>{{ video }}</p>
-                <button class="download-button" onclick="downloadVideo('{{ video }}')">Download</button>
-                <button class="download-button" onclick="goToResults('{{ video }}')">Results</button>
-            </div>
-            {% endfor %}
-        </div>
-    </div>
-    
+<div class="text-center">
+  <h1>Videos Dashboard</h1>
+</div>
+<div class="container">
+  <div class="video-list">
+    {% for video in video_files %}
+      <div class="card shadow mt-4">
+        <div class="card-body">
 
-    <script>
-        function goToResults(video) {
-            window.location.href = '/result/' + video.replace('.mp4', '');
-        }
-    </script>
+          <h5 class="card-title">{{ video }}</h5>
+          <button class="btn btn-primary" type="button" onclick="downloadVideo('{{ video }}')">
+            Download
+          </button>
+          <button class="btn btn-primary" type="button" onclick="goToResults('{{ video }}')">Results
+          </button>
+        </div>
+      </div>
+      </div>
+    {% endfor %}
+</div>
+</div>
 
-    <script>
-        function downloadVideo(video) {
-            const link = document.createElement('a');
-            link.href = `/videos/${video}`;
-            link.download = video;
-            link.click();
-        }
-    </script>
+
+<script>
+  function goToResults(video) {
+    window.location.href = '/result/' + video.replace('.mp4', '');
+  }
+</script>
+
+<script>
+  function downloadVideo(video) {
+    const link = document.createElement('a');
+    link.href = `/videos/${video}`;
+    link.download = video;
+    link.click();
+  }
+</script>
 </body>
 </html>
